[package]
name = "covweed"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain ="0.12.4"
reqwest = {version="0.10.9",features=["blocking","json"]}
serde_json ="1.0.59"
serde={version="1.0.117",features=["derive"]}
structopt="0.3.13"
